Fix collapsed table overflow
Bug: T247702

--- a/pagelib/src/transform/CollapseTable.css
+++ b/pagelib/src/transform/CollapseTable.css
@@ -198,3 +198,7 @@ div.pcs-collapse-table-container {
     float: initial;
   }
 }
+
+.wikitable {
+  border: none;
+}
